appId: com.appiumpro.the_app
---
# Screen Object: Clipboard.setText(text)

- tapOn:
    id: "messageInput"

- inputText: "${CLIPBOARD_MESSAGE}"

# Android only.
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard

- tapOn:
    id: "setClipboardText"

- tapOn:
    id: "refreshClipboardText"

- extendedWaitUntil:
    visible:
      id: "clipboardText"
    timeout: 5000

- assertVisible: "${CLIPBOARD_MESSAGE}"
