appId: com.appiumpro.the_app
---
# Screen Object: Home.openClipboard()

- assertVisible:
    id: "Clipboard Demo"

- tapOn:
    id: "Clipboard Demo"

- assertVisible:
    id: "refreshClipboardText"
