appId: com.appiumpro.the_app
---
# Screen Object: Home.openEcho()
- assertVisible:
    id: "Echo Box"
- tapOn:
    id: "Echo Box"
- assertVisible: "Echo Screen"
