appId: com.appiumpro.the_app
---
# Screen Object: Home.openList()
- scrollUntilVisible:
    element:
      id: "List Demo"
    direction: DOWN
- tapOn:
    id: "List Demo"
- assertVisible: "Check out these clouds"
