appId: com.appiumpro.the_app
---
# Screen Object: Home.openLogin()
- assertVisible:
    id: "Login Screen"
- tapOn:
    id: "Login Screen"
- assertVisible: "Login"
