appId: com.appiumpro.the_app
---
# Screen Object: Login.tryInvalidLogin(username,password)
- tapOn:
    id: "username"
- inputText: "${USERNAME}"
- tapOn:
    id: "password"
- inputText: "${PASSWORD}"
- hideKeyboard
- tapOn:
    id: "loginBtn"
- assertVisible: "Invalid login credentials, please try again"
- tapOn: "OK"
- assertVisible: "Login"
