appId: com.appiumpro.the_app
---
# Screen Object: Login.loginAs(username,password)

- tapOn:
    id: "username"

- inputText: "${USERNAME}"

- tapOn:
    id: "password"

- inputText: "${PASSWORD}"

# iOS keyboard dismissal is unreliable.
# Only explicitly hide it on Android.
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard

- tapOn:
    id: "loginBtn"

- assertVisible: "Secret Area"

- assertVisible: "You are logged in as"

- assertVisible: "${USERNAME}"
